<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="popular_song">Popular Song</string>
    <string name="personal">Personal</string>
    <string name="feedback">Feedback</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gradient_background">TODO</string>
    <string name="title_music">Title Music</string>
    <string name="singer_name">Singer Name</string>
    <string name="love">Love Song</string>
    <string name="runtime">--:--</string>
    <string name="total_time">--:--</string>
    <string name="previous">TODO</string>
    <string name="random">TODO</string>
    <string name="play_or_pause">TODO</string>
    <string name="next">TODO</string>
    <string name="repeat">TODO</string>
</resources>