<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mContainer"
        android:background="@drawable/bgr_play_music"
        android:orientation="vertical"
        tools:context=".activity.DetailActivity">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_play_music"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:elevation="0dp"
            android:background="#00FFFFFF"
            android:gravity="center_horizontal"
            android:minHeight="?attr/actionBarSize"
            android:textAlignment="center"
            android:theme="?attr/actionBarTheme"/>

    <ImageView
            android:id="@+id/imagegradient"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/dark"
            android:contentDescription="@string/gradient_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager_disc"
            android:layout_width="275dp"
            android:layout_height="275dp"
            android:layout_below="@+id/toolbar_play_music"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="56dp" />

    <RelativeLayout
            android:id="@+id/rl_in4music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewpager_disc"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp">

        <TextView
                android:id="@+id/textview_title_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="310dp"
                android:text="@string/title_music"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

        <TextView
                android:id="@+id/textview_singer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textview_title_music"
                android:layout_marginTop="8dp"
                android:maxWidth="350dp"
                android:text="@string/singer_name"
                android:textColor="#E4E4E4"
                android:textSize="20sp" />

        <ImageView
                android:id="@+id/imageview_love_song"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/iconlove"
                android:contentDescription="@string/love"
                android:scaleType="fitXY"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </RelativeLayout>

    <SeekBar
            android:id="@+id/seekbar_time"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/rl_in4music"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:progressTint="#FFFFFF"
            android:thumb="@drawable/thumb" />

    <RelativeLayout
            android:id="@+id/rl_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekbar_time"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp">

        <TextView
                android:id="@+id/textview_runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/runtime"
                android:textColor="#E4E4E4"
                android:textSize="18sp" />

        <TextView
                android:id="@+id/textview_total_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/total_time"
                android:textColor="#E8E8E8"
                android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
            android:layout_below="@id/rl_time"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageButton
                android:id="@+id/image_button_round"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="24dp"
                android:layout_toStartOf="@+id/image_button_preview"
                android:background="@null"
                android:contentDescription="@string/random"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/shuffle_svgrepo_com" />

        <ImageButton
                android:id="@+id/image_button_preview"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_toStartOf="@+id/image_button_play_pause"
                android:background="@null"
                android:contentDescription="@string/previous"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/iconpreview" />

        <ImageButton
                android:id="@+id/image_button_play_pause"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:background="@null"
                android:contentDescription="@string/play_or_pause"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/nutplay"
                android:layout_centerInParent="true"/>

        <ImageButton
                android:id="@+id/image_button_next"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/image_button_play_pause"
                android:background="@null"
                android:contentDescription="@string/next"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/iconnext" />

        <ImageButton
                android:id="@+id/imageButtonlap"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="24dp"
                android:layout_toEndOf="@+id/image_button_next"
                android:background="@null"
                android:contentDescription="@string/repeat"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/iconrepeat" />
    </RelativeLayout>
</RelativeLayout>